--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marketing-support",
+  "name": "Marketing-Support-Pro",
   "private": true,
   "version": "0.0.0",
   "type": "module",
