--- a/.github/build.apk.yml
+++ b/.github/build.apk.yml
@@ -9,51 +9,35 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-      # 1. Checkout code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # 2. Setup Node.js with caching
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      # 3. Install dependencies (faster with cache)
-      - name: Install dependencies
-        run: npm ci
-
-      # 4. Build Vue project
-      - name: Build web project
-        run: npm run build
-
-      # 5. Capacitor setup
-      - name: Install Capacitor CLI
-        run: npm install -g @capacitor/cli
-
-      - name: Sync Android
-        run: npx cap sync android
-
-      # 6. Setup Java & Gradle cache
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
-
-      # 7. Build APK (debug)
-      - name: Build APK
-        run: |
-          cd android
-          ./gradlew assembleDebug
-
-      # 8. Upload APK artifact
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: marketing-support-apk
-          path: android/app/build/outputs/apk/debug/app-debug.apk
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
+    
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+    
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+    
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
+      
+    - name: Build Release APK
+      run: |
+        ./gradlew assembleRelease
+        # Note: Release build requires signing configuration
+        
+    - name: Upload APK artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: android-apks
+        path: |
+          app/build/outputs/apk/debug/
+          app/build/outputs/apk/release/
